2011-04-10  Kirit Saelensminde  <kirit@felspar.com>
 Added a time logging function that logs any individual test that takes more than ten seconds to run.

2011-04-09  Kirit Saelensminde  <kirit@felspar.com>
 The insert functions for JSON values now use a coerce rather than a JSON constructor so the API will work with more data types.

2011-03-11  Kirit Saelensminde  <kirit@felspar.com>
 Updated the build system so that there is a new fost-integration-test target that will create a test executable that can be run at any later stage as well as run the tests during the build process.

2011-03-04  Kirit Saelensminde  <kirit@felspar.com>
 The jcursor constructor can now take up to four arguments and build a cursor path from them.

2011-02-10  Kirit Saelensminde  <kirit@felspar.com>
 JSON to JSON coercions are now supported and logging now accepts any parameter type which is coercable to JSON.

2010-11-16  Kirit Saelensminde  <kirit@felspar.com>
 Added a new basic logging library.

2010-11-09  Kirit Saelensminde  <kirit@felspar.com>
 The build system now supports installation based on the location set in the PREFIX envrionment variable. If the path is relative then it is relative to the location of the Jamroot file that is being built.

2010-11-05  Kirit Saelensminde  <kirit@felspar.com>
 Added a wrapper function for boost::spirit::parse which grabs a mutex forcing serialisation of the use of the parser to get around a threading bug in Spirit.

2010-11-02  Kirit Saelensminde  <kirit@felspar.com>
 Catching of incorrect exceptions in tests now shows the full text of the caught exception.

2010-10-01  Kirit Saelensminde  <kirit@felspar.com>
 Improved the display of exceptions by forcing them to use printOn.

2010-09-26  Kirit Saelensminde  <kirit@felspar.com>
 fostlib::string instances are now constructible from a wider range of iterators, including fostlib::string::const_iterator.

2010-09-19  Kirit Saelensminde  <kirit@felspar.com>