@@ -1,0 +1,17 @@
+/*
+    Copyright 2011, Felspar Co Ltd. http://support.felspar.com/
+    Distributed under the Boost Software License, Version 1.0.
+    See accompanying file LICENSE_1_0.txt or copy at
+        http://www.boost.org/LICENSE_1_0.txt
+*/
+
+
+#ifdef FOST_OS_WINDOWS
+    #define FOST_DATETIME_DECLSPEC __declspec( dllimport )
+#else
+    #define FOST_DATETIME_DECLSPEC
+#endif
+
+
+#include <fost/timer.hpp>
+
