@@ -1,5 +1,6 @@
 2011-04-10  Kirit Saelensminde  <kirit@felspar.com>
  Added a time logging function that logs any individual test that takes more than ten seconds to run.
+ Added a timer to the datetime library which allows us to time how long parts of a program execution take.
 
 2011-04-09  Kirit Saelensminde  <kirit@felspar.com>
  The insert functions for JSON values now use a coerce rather than a JSON constructor so the API will work with more data types.
